Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Othet_Activities__c.field-meta.xml
<CustomField>
    <fullName>Othet_Activities__c</fullName>
    <label>Other Activities</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exhibitions/Shows</fullName>
            </value>
            <value>
                <fullName>Depot Meet/Office Meet</fullName>
            </value>
            <value>
                <fullName>Holiday/ Market Closed</fullName>
            </value>
            <value>
                <fullName>Leave</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Promotional Activity</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Post Visit Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>