Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role__c</fullName>
    <formula>CreatedBy.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Title of the user who created this visit</inlineHelpText>
    <label>Owner Role</label>
    <type>Text</type>
</CustomField>