Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Parent_Party_Ramco_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Party_Ramco_ID__c</fullName>
    <formula>Party_Name__r.Parent.Ramco_ID__c</formula>
    <label>Parent Party Ramco ID</label>
    <type>Text</type>
</CustomField>