Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Parry_name_contact_number__c.field-meta.xml
<CustomField>
    <fullName>Parry_name_contact_number__c</fullName>
    <formula>Party_Name__r.Contact_Number_Mobile__c</formula>
    <label>Party name contact number</label>
    <type>Text</type>
</CustomField>