Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Party_District__c.field-meta.xml
<CustomField>
    <fullName>Party_District__c</fullName>
    <formula>Text(Party_Name__r.District__c)</formula>
    <label>Party District</label>
    <type>Text</type>
</CustomField>