Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Party_Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Party_Firm_Name__c</fullName>
    <formula>Party_Name__r.Firm_Name__c</formula>
    <label>Party Firm Name</label>
    <type>Text</type>
</CustomField>