Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Party_Market__c.field-meta.xml
<CustomField>
    <fullName>Party_Market__c</fullName>
    <formula>TEXT(Party_Name__r.Market__c)</formula>
    <label>Party Market Type</label>
    <type>Text</type>
</CustomField>