Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Party_mobile_number__c.field-meta.xml
<CustomField>
    <fullName>Party_mobile_number__c</fullName>
    <formula>Party_Name__r.Contact_Number_Mobile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Party mobile number</label>
    <type>Text</type>
</CustomField>