Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Party_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Party Name/Firm Name</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Party_Type__c</field>
            <operation>equals</operation>
            <valueField>Account.Party_Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AP Site Visits</relationshipLabel>
    <relationshipName>AP_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>