Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Party_name_Adhar_Number__c.field-meta.xml
<CustomField>
    <fullName>Party_name_Adhar_Number__c</fullName>
    <formula>Party_Name__r.Adhar_Number__c</formula>
    <label>Party name Adhar Number</label>
    <type>Text</type>
</CustomField>