Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Party_name_GST_number__c.field-meta.xml
<CustomField>
    <fullName>Party_name_GST_number__c</fullName>
    <formula>Party_Name__r.VAT_CST_Number__c</formula>
    <label>Party name-GST number</label>
    <type>Text</type>
</CustomField>