Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Party_name_PAN_number__c.field-meta.xml
<CustomField>
    <fullName>Party_name_PAN_number__c</fullName>
    <formula>Party_Name__r.PAN_number_F__c</formula>
    <label>Party name PAN number</label>
    <type>Text</type>
</CustomField>