Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Party_Name_record_type__c.field-meta.xml
<CustomField>
    <fullName>Party_Name_record_type__c</fullName>
    <formula>Party_Name__r.RecordType.DeveloperName</formula>
    <label>Party Name record type</label>
    <type>Text</type>
</CustomField>