Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Party_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Party_Parent_Account__c</fullName>
    <formula>Party_Name__r.Parent.Name</formula>
    <label>Party Parent Account</label>
    <type>Text</type>
</CustomField>