Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Party_RcrdType_Name__c.field-meta.xml
<CustomField>
    <fullName>Party_RcrdType_Name__c</fullName>
    <formula>Party_Name__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Party_RcrdType_Name</label>
    <type>Text</type>
</CustomField>