Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Party_Type__c.field-meta.xml
<CustomField>
    <fullName>Party_Type__c</fullName>
    <label>Party Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Borer</fullName>
            </value>
            <value>
                <fullName>Borewell Office</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Dealers Salesman</fullName>
            </value>
            <value>
                <fullName>Direct Dealer</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Engineer</fullName>
            </value>
            <value>
                <fullName>Farmer</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Institution</fullName>
            </value>
            <value>
                <fullName>Mechanic</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Panchayat Head</fullName>
            </value>
            <value>
                <fullName>Plumber</fullName>
            </value>
            <value>
                <fullName>Plumber Cum Mechanic</fullName>
            </value>
            <value>
                <fullName>Plumbing Contractor</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Project Owner/Developer</fullName>
            </value>
            <value>
                <fullName>Projects</fullName>
            </value>
            <value>
                <fullName>Purchase Manager</fullName>
            </value>
            <value>
                <fullName>Site Engineer</fullName>
            </value>
            <value>
                <fullName>Site Incharge / Supervisor</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Winders</fullName>
            </value>
            <value>
                <fullName>Plumber club member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>