Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Party_Type_Report__c.field-meta.xml
<CustomField>
    <fullName>Party_Type_Report__c</fullName>
    <description>This field is used in report.</description>
    <formula>Text( Party_Type__c )</formula>
    <label>Party Type</label>
    <type>Text</type>
</CustomField>