Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Plumbing_club_ID_2_0__c.field-meta.xml
<CustomField>
    <fullName>Plumbing_club_ID_2_0__c</fullName>
    <formula>Party_Name__r.Plumbing_club_ID_2_0__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plumbing club ID 2.0</label>
    <type>Text</type>
</CustomField>