Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Point_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Point_Discussed__c</fullName>
    <label>Point Discussed</label>
    <type>TextArea</type>
</CustomField>