Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Post_Visit_Order__c.field-meta.xml
<CustomField>
    <fullName>Post_Visit_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Post Visit Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipName>AP_Site_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>