Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Name</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Opportunity.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Party_Name__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>AP Site Visits</relationshipLabel>
    <relationshipName>AP_Site_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>