Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Promotion</description>
    <label>Promotion</label>
    <referenceTo>Promotion__c</referenceTo>
    <relationshipName>AP_Site_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>