Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Promotion_Party_Type__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Party_Type__c</fullName>
    <formula>Text(Promotion__r.Type__c)</formula>
    <label>Promotion Party Type</label>
    <type>Text</type>
</CustomField>