Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Purpose_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Visit__c</fullName>
    <label>Purpose of Visit</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Party_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Approval for Ashirvad Brand</fullName>
            </value>
            <value>
                <fullName>Building Relationship</fullName>
            </value>
            <value>
                <fullName>Complaints-Aqua</fullName>
            </value>
            <value>
                <fullName>Complaints-column</fullName>
            </value>
            <value>
                <fullName>Complaints-CPVC</fullName>
            </value>
            <value>
                <fullName>Complaints-SWR</fullName>
            </value>
            <value>
                <fullName>Dispatch</fullName>
            </value>
            <value>
                <fullName>Enquiry</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Market Survey</fullName>
            </value>
            <value>
                <fullName>New Order Booking</fullName>
            </value>
            <value>
                <fullName>Order Follow Up</fullName>
            </value>
            <value>
                <fullName>Payment Follow Up</fullName>
            </value>
            <value>
                <fullName>Product Presentation</fullName>
            </value>
            <value>
                <fullName>Attending Complaint</fullName>
            </value>
            <value>
                <fullName>Recce</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Survey/Audit</fullName>
            </value>
            <value>
                <fullName>Give for Print/Print Delivery</fullName>
            </value>
            <value>
                <fullName>Courtesy Call</fullName>
            </value>
            <value>
                <fullName>Repair/Rework</fullName>
            </value>
            <value>
                <fullName>Events / Exhibitions</fullName>
            </value>
            <value>
                <fullName>Design Development</fullName>
            </value>
            <value>
                <fullName>Facility Visit/Vendor Evaluation</fullName>
            </value>
            <value>
                <fullName>Review Meet</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Promotional activity</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>