Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Reason_for_Other_Activity__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Other_Activity__c</fullName>
    <label>Reason for Other Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exhibition/Shows</fullName>
            </value>
            <value>
                <fullName>Holiday/ Market Closed</fullName>
            </value>
            <value>
                <fullName>Leave</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Promotional Activity</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>