Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/RecordEdit__c.field-meta.xml
<CustomField>
    <fullName>RecordEdit__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check for is New or Not</description>
    <label>RecordEdit</label>
    <type>Checkbox</type>
</CustomField>