Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/RecordType_Name__c.field-meta.xml
<CustomField>
    <fullName>RecordType_Name__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecordType_Name</label>
    <type>Text</type>
</CustomField>