Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Requirements__c.field-meta.xml
<CustomField>
    <fullName>Requirements__c</fullName>
    <label>Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advt. Materials</fullName>
            </value>
            <value>
                <fullName>Branding</fullName>
            </value>
            <value>
                <fullName>Brochures</fullName>
            </value>
            <value>
                <fullName>Gifts</fullName>
            </value>
            <value>
                <fullName>Pricelists</fullName>
            </value>
            <value>
                <fullName>Product Samples-Column</fullName>
            </value>
            <value>
                <fullName>Product Samples-CPVC</fullName>
            </value>
            <value>
                <fullName>Product Samples-New Range</fullName>
            </value>
            <value>
                <fullName>Product Samples-SWR</fullName>
            </value>
            <value>
                <fullName>Product Samples-UPVC</fullName>
            </value>
            <value>
                <fullName>Promotional Activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>