Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Retailing_Day__c.field-meta.xml
<CustomField>
    <fullName>Retailing_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retailing Day</label>
    <type>Checkbox</type>
</CustomField>