Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Skyvia__c.field-meta.xml
<CustomField>
    <fullName>Skyvia__c</fullName>
    <formula>DATEVALUE(CreatedDate) &lt;= DATE(2017,12,31)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skyvia</label>
    <type>Checkbox</type>
</CustomField>