Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Skyvia_record_count__c.field-meta.xml
<CustomField>
    <fullName>Skyvia_record_count__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skyvia record count</label>
    <type>Checkbox</type>
</CustomField>