Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/State_Report__c.field-meta.xml
<CustomField>
    <fullName>State_Report__c</fullName>
    <formula>Text(Party_Name__r.State__c)</formula>
    <label>State.</label>
    <type>Text</type>
</CustomField>