Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>This field is created cause used in reports</description>
    <formula>text(Party_Name__r.Status__c)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>