Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Taluka__c.field-meta.xml
<CustomField>
    <fullName>Taluka__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Taluka</label>
    <referenceTo>AP_Taluk_Master__c</referenceTo>
    <relationshipLabel>AP Site Visits</relationshipLabel>
    <relationshipName>AP_Site_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>