Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Taluka_ID__c.field-meta.xml
<CustomField>
    <fullName>Taluka_ID__c</fullName>
    <description>This field is used in reports only.</description>
    <formula>Party_Name__r.Taluk_Tehsil__r.Id</formula>
    <label>Taluka ID</label>
    <type>Text</type>
</CustomField>