Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <description>Target</description>
    <label>Target</label>
    <referenceTo>Target__c</referenceTo>
    <relationshipLabel>AP Site Visits</relationshipLabel>
    <relationshipName>AP_Site_Visits</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>