Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Target_ID__c.field-meta.xml
<CustomField>
    <fullName>Target_ID__c</fullName>
    <formula>AP_Tour_Plan__r.Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target ID</label>
    <type>Text</type>
</CustomField>