Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Task_Tab__c.field-meta.xml
<CustomField>
    <fullName>Task_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Task Tab</label>
    <type>Checkbox</type>
</CustomField>