Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Task_To__c.field-meta.xml
<CustomField>
    <fullName>Task_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AP_Site_Visits1</relationshipName>
    <type>Lookup</type>
</CustomField>