Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/TL__c.field-meta.xml
<CustomField>
    <fullName>TL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Working with</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AP_Visits1</relationshipName>
    <type>Lookup</type>
</CustomField>