Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Total_no_of_attendees__c.field-meta.xml
<CustomField>
    <fullName>Total_no_of_attendees__c</fullName>
    <label>No. Of Attendees</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>