Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Training_Details__c.field-meta.xml
<CustomField>
    <fullName>Training_Details__c</fullName>
    <label>Training Details</label>
    <type>TextArea</type>
</CustomField>