Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Imperial</fullName>
            </value>
            <value>
                <fullName>Royal</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>Regal</fullName>
            </value>
            <value>
                <fullName>Non Club</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>