Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Unplanned_Visit__c.field-meta.xml
<CustomField>
    <fullName>Unplanned_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unplanned Visit</label>
    <type>Checkbox</type>
</CustomField>