Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AP_Site_Visits2</relationshipName>
    <type>Lookup</type>
</CustomField>